fixed the overflow

--- a/about.css
+++ b/about.css
@@ -48,6 +48,7 @@
     border-radius: 2px;
     margin-left: 20px;
     border: none;
+    color: #fff;
     font-size: 14px;
     cursor: pointer;
     background: transparent;
