--- a/style.css
+++ b/style.css
@@ -1,20 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800&display=swap');
 
-html, body{
+*{
     font-family: 'Raleway', sans-serif;
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+    max-width: 100%;
     box-sizing: border-box;
     color: #fff;
 }
 .container{
     background: linear-gradient(to right, #4C0000ff, rgb(0, 0, 0));
     height: 100vh;
-}
-.title a{
-    text-decoration: none;
-    color: #fff;
 }
 .hero{
     margin: 0px 100px;
